2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* main.c: Don't #include capplet-widget.h or the archiver stuff
	(main): Call gtk_main rather than capplet_gtk_main
	Remove archiver stuff
	(setup_capplet_widget): Don't connect to state_changed_cb
	(state_changed_cb): Remove
	(main): Don't pass cap_options
	(main): Add parameter GNOME_PARAM_APP_DATADIR

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* screensaver.desktop.in.in:

	Add Categories field so this won't show up in the root
	panel menu.
	
2001-12-08  Havoc Pennington  <hp@pobox.com>

	* gnome-startup.h: use G_BEGIN_DECLS so it builds

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* preferences.c (preferences_load/save): Port to GConf.

	* main.c (setup_capplet_widget): Port away from libcapplet,
	use a GtkDialog.
	(main): Call gnome_program_init.
	
	* screensaver.schemas: Added.
	
	* Makefile.am: Install schema file.

2001-12-01  Richard Hestilow  <hestilow@ximian.com>

	* Initial GNOME2 port.

2001-10-18  Jakub Steiner <jimmac@ximian.com>

	* screensaver-capplet.png: fix the icon (bug #61522)

2001-10-13  Richard Hestilow  <hestilow@ximian.com>

	* prefs-widget.c: Backport to GtkCList.
	* checked.xpm, unchecked.xpm: Recreate -- something was messed up.

2001-09-28  Richard Hestilow  <hestilow@ximian.com>

	* preferences.c (preferences_load): Change the default mode to
	"Select One Only" as opposed to Random From List. Fixes bug
	#60762.

2001-09-24  Bradford Hovinen  <hovinen@ximian.com>

	* prefs-widget.c (prefs_widget_class_init): Initialize
	prefs_widget_parent_class
	(prefs_widget_destroy): Add more paranoid checking to make sure we
	aren't derefing a NULL pointer

2001-09-24  Tambet Ingo  <tambet@ximian.com>

	* prefs-widget.c (prefs_widget_init): Fixed to build with new GAL.

2001-08-23  Kai Lahmann  <kl@linuxfaqs.de>

	* screesaver-properties.glade: pwr_conf_dialog had fixed sizes, doh!

2001-08-23  Bradford Hovinen  <hovinen@ximian.com>

	* main.c: Port to new CORBA interface