@@ -1,8 +1,8 @@
 [Desktop Entry]
 _Name=Screensaver
 _Comment=Configure the settings of the screensaver
-Exec=screensaver-properties-capplet
-Icon=gnome-ccscreensaver.png
+Exec=gnome-screensaver-properties
+Icon=screensaver-capplet.png
 Terminal=0
 Type=Application
 Categories=Application;Settings;
